syntax="proto3";

package auth;

option go_package = "/proto";


service AuthService {
    rpc Signup(SignupRequest) returns (SignupResponse);
    rpc Login(LoginRequest) returns (LoginResponse);
}

message SignupRequest{
    string email = 1;
    string password = 2;
}

message SignupResponse{
    string user_id=1;
    string message = 2;
}

message LoginRequest{
    string email = 1;
    string password = 2;
}

message LoginResponse{
    string token = 1;
    string message = 2;
}